--- a/binfix.cabal
+++ b/binfix.cabal
@@ -19,7 +19,7 @@ executable binfix
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7,
+  build-depends:       base >=4.6,
                        directory >= 1.2,
                        filepath >= 1.3
   -- hs-source-dirs:      
